--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,11 @@ dependencies {
 	implementation group: 'org.webjars', name: 'jquery.inputmask', version: '5.0.5'
 	implementation group: 'org.webjars', name: 'bootstrap-datepicker', version: '1.9.0'
 
+	implementation group: 'net.sf.jasperreports', name: 'jasperreports', version: '6.17.0'
+	implementation group: 'com.lowagie', name: 'itext', version: '4.2.1', 'ext': 'jar'
+	implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.2'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
